new_process routine is finished
new variable in variables.inc

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,28 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+fkt_text.LST
+fkt_text.OBJ
+main.LST
+main.OBJ
+proc_a.LST
+proc_a.OBJ
+proc_b.LST
+proc_b.OBJ
+proc_console.LST
+proc_console.OBJ
+scheduler
+scheduler.build_log.htm
+scheduler.lnp
+scheduler.LST
+scheduler.M51
+scheduler.OBJ
+scheduler.uvgui.Stanislav
+scheduler.uvgui_Stanislav.bak
+scheduler.uvopt
+scheduler.uvproj
+scheduler_uvopt.bak
+scheduler_uvproj.bak
+serial.LST
+serial.OBJ
+STARTUP.A51
