Latex document and structure changes

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,27 @@ fkt.lnp
 fkt.M51
 fkt.uvproj
 *.~vsdx
+RA_Project/Scheduler.aux
+RA_Project/Scheduler.bbl
+RA_Project/Scheduler.blg
+RA_Project/Scheduler.brf
+RA_Project/Scheduler.idx
+RA_Project/Scheduler.lof
+RA_Project/Scheduler.log
+RA_Project/Scheduler.nlo
+RA_Project/Scheduler.out
+RA_Project/Scheduler.pdf
+fkt.uvgui.Stanislav
+fkt.uvgui_Stanislav.bak
+fkt.uvopt
+fkt_uvopt.bak
+fkt_uvproj.bak
+proc_z.LST
+proc_z.OBJ
+RA_Project/content/fragenteil.log
+RA_Project/Imagelist.dat
+RA_Project/preambel/gnuplotstyle-spectrum.style
+RA_Project/preambel/preambel.log
+RA_Project/preambel/settings.log
+RA_Project/Scheduler.synctex.gz
+RA_Project/Scheduler.toc
